src/test/deca/syntax/valid/custom/while/while_readInt.deca
// Description:
//   While with condition readInt().
// Results:
//
//
// History:
//    created on 13/01/2022

{
   while (readInt() == 1) {
        i = i + 1;
   }
}
