src/test/deca/syntax/invalid/custom/object/while_cast.deca
// Description:
//   While with condition cast.
// Results:
//
//
// History:
//    created on 13/01/2022

{
   while (int) (1.1) == 1) {
        i = i + 1;
   }
}
